# asteria-agent

./: .env.example  .gitignore  LOCAL_DEV.md  README.md  langgraph-multiagent.json  pyproject.toml  requirements.txt  start-local.sh
asteria_researcher/: README.md  __init__.py  agent.py
asteria_researcher/actions/: agent_creator.py  query_processing.py  retriever.py  web_scraping.py
asteria_researcher/config/: config.py
asteria_researcher/context/: compression.py  hybrid_compression.py
asteria_researcher/mcp/: __init__.py  client.py
asteria_researcher/memory/: embeddings.py
asteria_researcher/retrievers/: utils.py
asteria_researcher/scraper/: scraper.py
asteria_researcher/skills/: browser.py  context_manager.py  curator.py  deep_research.py  image_generator.py  researcher.py  writer.py
asteria_researcher/utils/: enum.py  llm.py  rate_limiter.py  tools.py  validators.py  workers.py
asteria_researcher/vector_store/: vector_store.py
backend/: README.md  requirements.txt  run_server.py
backend/auth/: db.py  dependencies.py  email_service.py  jwt_utils.py  models.py  report_store_pg.py  reports_schema.sql  routes.py  schema.sql
backend/chat/: chat.py
backend/knowledge/: modular_qwen.py  modular_rag.py  modular_rag_settings.yaml  routes.py
backend/server/: app.py  multi_agent_runner.py  server_utils.py  websocket_manager.py
frontend/nextjs/: Dockerfile.dev  README.md  next.config.mjs  package.json  package.lib.json
knowledge_hub/: __init__.py  cli.py  config.py  db.py  mcp_server.py
knowledge_hub/eval/: RESULTS.md  build_golden.py  evaluate.py  golden.jsonl
multi_agents/: README.md  agent.py  main.py  task.json
scripts/: formal_full_kb_ragas_eval.py  formal_modular_rag_eval.py
tests/: test_perspective_research.py
(+98 files in other folders)
