[project]
name = "asteria-agent"
version = "0.1.0"
description = "A local-first AI research assistant built with LangChain, LangGraph, FastAPI, and Next.js."
authors = [{ name = "Peng Kun" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.1",
    "arxiv>=2.0.0",
    "beautifulsoup4>=4.12.2",
    "brotli>=1.2.0",
    "chromadb>=0.4.0",
    "datasets>=2.0.0",
    "ddgs>=9.0.0",
    "fastapi>=0.104.1",
    "htmldocx>=0.0.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jieba>=0.42",
    "json-repair>=0.29.8",
    "json5>=0.9.25",
    "langchain>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.2.76",
    "litellm>=1.71.0",
    "loguru>=0.7.2",
    "lxml>=4.9.2",
    "markdown>=3.5.1",
    "markitdown[pdf]>=0.1.0",
    "mcp>=1.9.1",
    "md2pdf>=1.0.1",
    "mistune>=3.0.2",
    "numpy>=2.0.0,<2.3.0",
    "openai>=1.3.3",
    "pydantic>=2.5.1",
    "pymupdf>=1.23.6",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "ragas>=0.1.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.28",
    "streamlit>=1.30.0",
    "tavily-python>=0.7.12",
    "tiktoken>=0.7.0",
    "unstructured>=0.13",
    "uvicorn>=0.24.0.post1",
    "websockets>=13.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asteria_researcher*"]
